complications with javaFX packages